# tcr_format_parsers

./: README.md  pyproject.toml
devtools/conda-envs/: test.yaml
tcr_format_parsers/CRESTA_CellRanger/: CellRangerOutput.py  parse_cresta.py  parse_cresta_runs.py
tcr_format_parsers/IEDB/: fetch_IEDB_triads.py
tcr_format_parsers/common/: MHCCodeConverter.py  TCRUnique.py  TCRUtils.py  TriadUtils.py
tcr_format_parsers/data/: datafiles.py  hla_uniprot_data_cache.csv
